fixed spacing

--- a/css/output.css
+++ b/css/output.css
@@ -610,6 +610,26 @@ video {
   max-width: 36rem;
 }
 
+.max-w-\[75\%\] {
+  max-width: 75%;
+}
+
+.max-w-\[80\%\] {
+  max-width: 80%;
+}
+
+.max-w-\[90\%\] {
+  max-width: 90%;
+}
+
+.max-w-\[95\%\] {
+  max-width: 95%;
+}
+
+.max-w-\[100\%\] {
+  max-width: 100%;
+}
+
 .skew-x-\[-45deg\] {
   --tw-skew-x: -45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -762,11 +782,31 @@ video {
   .min-\[300px\]\:p-10 {
     padding: 2.5rem;
   }
+
+  .min-\[300px\]\:p-9 {
+    padding: 2.25rem;
+  }
+
+  .min-\[300px\]\:p-8 {
+    padding: 2rem;
+  }
+
+  .min-\[300px\]\:p-7 {
+    padding: 1.75rem;
+  }
 }
 
 @media (min-width: 1024px) {
   .lg\:mb-0 {
     margin-bottom: 0px;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:max-w-\[80\%\] {
+    max-width: 80%;
   }
 
   .lg\:grid-cols-3 {
@@ -811,6 +851,10 @@ video {
 @media (min-width: 1280px) {
   .xl\:justify-around {
     justify-content: space-around;
+  }
+
+  .xl\:p-10 {
+    padding: 2.5rem;
   }
 
   .xl\:px-0 {
